--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                     <i class="bi bi-person-circle" style="font-size: 20px; color: #b95050;"></i>
                     Acheampong
                 </a> </p>
-            <img src="./images/acheamp.png" alt="">
+            <!-- <img src="./images/acheamp.png" alt=""> -->
         </div>
 
     </div>
